# OpenCV-Tutorials

./: CMakeLists.txt  brightness.cpp  histogram.cpp  histogram2.cpp  lms.cpp  videocam.cpp
