cmake_minimum_required(VERSION 3.15)
project(OpenCV_Tutorial)

set(CMAKE_CXX_STANDARD 14)
find_package( OpenCV REQUIRED )
add_executable(OpenCV_Tutorial videocam.cpp)
add_executable(OpenCV_Tutorial2 lms.cpp)
add_executable(OpenCV_Tutorial3 brightness.cpp)
add_executable(OpenCV_Tutorial4 histogram.cpp)
add_executable(OpenCV_Tutorial5 histogram2.cpp)
include_directories(${OpenCV_INCLUDE_DIRS})
target_link_libraries( ${PROJECT_NAME} ${OpenCV_LIBS} )
target_link_libraries( OpenCV_Tutorial2 ${OpenCV_LIBS} )
target_link_libraries( OpenCV_Tutorial3 ${OpenCV_LIBS} )
target_link_libraries( OpenCV_Tutorial4 ${OpenCV_LIBS} )
target_link_libraries( OpenCV_Tutorial5 ${OpenCV_LIBS} )